# sedona-db

./: .asf.yaml  .gitignore  Cargo.toml  mkdocs.yml
.github/workflows/: dev.yml  packaging.yml  python-wheels.yml  python.yml  r-extended.yml  r.yml  rust-gpu.yml  rust.yml  wheels-expr.yml  wheels-zarr.yml
c/: CMakeLists.txt
c/sedona-extension/: Cargo.toml
c/sedona-s2geography/: CMakeLists.txt  build.rs
ci/scripts/: build-source.sh  wheels-bootstrap-vcpkg.sh  wheels-build-linux.sh  wheels-build-macos.sh  wheels-build-windows.ps1
dev-snapshot-main/: 404.html  index.html  objects.inv
dev-snapshot-main/development/: index.html
dev-snapshot-main/geopandas-interop/: index.html
dev-snapshot-main/overture-examples/: index.html
dev-snapshot-main/quickstart-cli/: index.html
dev-snapshot-main/quickstart-python/: index.html
dev-snapshot-main/search/: search_index.json
dev-snapshot-main/tags/: index.html
dev/release/: README.md  rat_exclude_files.txt  run-rat.sh  upload-release.sh  verify-release-candidate.sh
docker/: sedonadb-gpu.dockerfile
docs/: contributors-guide.md  geopandas-interop.md  gpu-acceleration.ipynb  gpu-acceleration.md  overture-examples.md  programming-guide.md  quickstart-python.md  release-post.ipynb  working-with-zarr-ndarray-sedonadb.ipynb  working-with-zarr-ndarray-sedonadb.md
python/sedonadb/: Cargo.toml  (+1 more)
python/sedonadb-expr/: pyproject.toml
python/sedonadb-zarr/: Cargo.toml  README.md  pyproject.toml
r/sedonadb/src/rust/: Cargo.toml  api.h
r/sedonadb/src/rust/src/: context.rs  dataframe.rs  error.rs  lib.rs  runtime.rs
(+329 files in other folders)
